# kserve-model-serving-platform

./: .dockerignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
airflow/: dag-bundle-config.ini
contracts/: prediction_request_contract.yml
docs/: accelerator-scheduling.md  advanced-orchestration-assessment.md  ai-workload-telemetry.md  airflow-asset-partitioning.md  airflow-dag-bundles.md  airflow-deadline-alerts.md  airflow-multi-team-readiness.md  airflow-stateful-orchestration.md  cloud-migration.md  constrained-impersonation.md  control-plane-depth.md  control-plane-diagnostics.md  cost-observability.md  demo-narration.txt  design-system.md  disaster-recovery.md  dra-admin-access-diagnostics.md  dra-advanced-device-sharing.md  dra-resource-health-status.md  dynamic-resource-allocation.md  event-driven-assets.md  gitops-promotion.md  governance-evidence.md  hpa-scale-to-zero.md  indexed-job-resilience.md  inference-gateway.md  inplace-pod-resize.md  judge-demo.md  kserve-v2-serving-runtime.md  kuberay-kueue.md  kubernetes-airflow-robustness.md  kueue-cohort-fair-sharing.md  kueue-elastic-workloads.md  kueue-flavor-fungibility.md  kueue-pending-workload-visibility.md  llm-inference-readiness.md  memory-qos.md  minikube-kserve.md  model-cache.md  multi-tenant-fairness.md  (+24 more)
gitops/: gitops-promotion.yaml
kserve/: custom-runtime-inferenceservice.yaml  inferenceservice-canary.yaml  llm-inference-readiness.yaml  local-model-cache.yaml  production-hardening.yaml  rollback-patch.yaml  transformer-explainer-topology.yaml
kubernetes/: memory-qos.yaml  (+45 more)
(+87 files in other folders)
